--- a/src/_config.yml
+++ b/src/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Everyday Coder 
+title: "Everyday Coder"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -30,8 +30,7 @@ twitter_username:
 github_username:
 
 # Build settings
-# theme: just-the-docs  
-remote_theme: pmarsceill/just-the-docs
+theme: just-the-docs  
 plugins:
   - jekyll-feed
 
