--- a/src/_config.yml
+++ b/src/_config.yml
@@ -53,3 +53,17 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+permalink: pretty
+
+#collections:
+#  posts:
+#    permalink: "/:collection/:path/"
+#    output: true
+#
+#just_the_docs:
+#  collections:
+#    posts:
+#      name: Documentation
+#      nav_exclude: false
+#      search_exclude: false
